# temperature_sensor

./: CMakeLists.txt  README  README.md  sdkconfig  sdkconfig.old
components/aht10/: aht10.c
components/aht10/include/: aht10.h
components/aht20/: aht20.c  aht20_tmp.c
components/aht20/include/: aht20.h  aht20_tmp.h
components/bme280/: bme280.c
components/bme280/include/: bme280.h
components/bmp280/: bmp280.c
components/bmp280/include/: bmp280.h
components/chip_info/: chip_info.c
components/chip_info/include/: chip_info.h
components/enp/: enp.c
components/enp/include/: enp.h
components/request/: request.c
components/request/include/: request.h
components/sensor/include/: sensor.h
components/sht21/: sht21.c
components/sht21/include/: sht21.h
components/wifi/: wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  main.c
