idf_component_register(SRCS "main.c"
					   INCLUDE_DIRS "components/aht10/include"
					   INCLUDE_DIRS "components/aht20/include"
					   INCLUDE_DIRS "components/bmp20/include"
					   INCLUDE_DIRS "components/sht21/include"
					   INCLUDE_DIRS "components/request/include"
					   INCLUDE_DIRS "components/wifi/include"
					   INCLUDE_DIRS "components/chip_info/include"
		      )
